0025602: It is important for IGES and STEP file format to add check, if wrong data are read from the file

1. Functions Precision::IsIllegal(...) and Precision::IsInfinitesimal(...) were added.
2. Detection incorrect numbers read from *.stp and/or *.igs files was added.